--- a/src/site.ejs
+++ b/src/site.ejs
@@ -185,7 +185,7 @@
                 </div>
                 <!-- CONTENT -->
                 <div class="flex flex-grow-0 flex-shrink-0 basis-[40%] flex-col items-center lg:ml-8 lg:max-w-[380px]">
-                    <h1 class="text-3xl text-bookmark-blue">Káva 1</h1>
+                    <h1 class="text-3xl text-bookmark-blue">Text 1</h1>
                     <p class="text-sm lg:text-base text-black text-left my-4 w-10/12 sm:w-3/4 lg:w-full">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dolorem earum quidem dolor
                         necessitatibus modi ab sed illum? Beatae iste doloremque illo.Lorem ipsum dolor sit amet,
@@ -205,7 +205,7 @@
                 </div>
                 <!-- CONTENT -->
                 <div class="flex flex-1 flex-col items-center lg:max-w-[480px]">
-                    <h1 class="text-3xl text-bookmark-blue">Kávička</h1>
+                    <h1 class="text-3xl text-bookmark-blue">Text 2</h1>
                     <p class="text-sm lg:text-base text-black my-4 text-left w-10/12 sm:w-3/4 lg:w-full">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis voluptates sit eum, distinctio
                         illo dicta beatae dolore voluptatum accusamus. Lorem ipsum dolor sit amet consectetur
@@ -226,7 +226,7 @@
                 </div>
                 <!-- CONTENT -->
                 <div class="flex flex-grow-0 flex-shrink-0 basis-[40%] flex-col items-center lg:ml-8 lg:max-w-[380px]">
-                    <h1 class="text-3xl text-bookmark-blue">Káva 3</h1>
+                    <h1 class="text-3xl text-bookmark-blue">Text 3</h1>
                     <p class="text-sm lg:text-base text-black my-4 text-left w-10/12 sm:w-3/4 lg:w-full">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dolorem earum quidem dolor
                         necessitatibus modi ab sed illum? Beatae iste doloremque illo.Lorem ipsum dolor sit amet,
@@ -447,7 +447,6 @@
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <div class="bg-white rounded-lg shadow-md p-6 md:ml-4">
-                        <h3 class="text-xl font-semibold mb-2">Google Reviews</h3>
                         <div class="flex items-center mb-2">
                             <svg viewBox="0 0 20 20" fill="currentColor" class="w-4 h-4 text-yellow-500 mr-1">
                                 <path fill-rule="evenodd"
@@ -464,7 +463,6 @@
                 </div>
                 <div class="swiper-slide">
                     <div class="bg-white rounded-lg shadow-md p-6 md:ml-4">
-                        <h3 class="text-xl font-semibold mb-2">Facebook Reviews</h3>
                         <div class="flex items-center mb-2">
                             <svg viewBox="0 0 20 20" fill="currentColor" class="w-4 h-4 text-yellow-500 mr-1">
                                 <path fill-rule="evenodd"
@@ -481,7 +479,6 @@
                 </div>
                 <div class="swiper-slide">
                     <div class="bg-white rounded-lg shadow-md p-6 md:ml-4">
-                        <h3 class="text-xl font-semibold mb-2">Facebook Reviews</h3>
                         <div class="flex items-center mb-2">
                             <svg viewBox="0 0 20 20" fill="currentColor" class="w-4 h-4 text-yellow-500 mr-1">
                                 <path fill-rule="evenodd"
@@ -498,7 +495,6 @@
                 </div>
                 <div class="swiper-slide">
                     <div class="bg-white rounded-lg shadow-md p-6 md:ml-4">
-                        <h3 class="text-xl font-semibold mb-2">Facebook Reviews</h3>
                         <div class="flex items-center mb-2">
                             <svg viewBox="0 0 20 20" fill="currentColor" class="w-4 h-4 text-yellow-500 mr-1">
                                 <path fill-rule="evenodd"
@@ -515,7 +511,6 @@
                 </div>
                 <div class="swiper-slide">
                     <div class="bg-white rounded-lg shadow-md p-6 md:ml-4">
-                        <h3 class="text-xl font-semibold mb-2">Facebook Reviews</h3>
                         <div class="flex items-center mb-2">
                             <svg viewBox="0 0 20 20" fill="currentColor" class="w-4 h-4 text-yellow-500 mr-1">
                                 <path fill-rule="evenodd"
@@ -581,7 +576,7 @@
             <div class="sm:col-span-1 mb-8 md:mb-0">
                 <button id="scrollTopBtnImgBottom" aria-label="Go home" title="Company"
                         class="inline-flex items-center">
-                    <img class="h-32" src="image/restlogo.png" alt="">
+                    <img class="h-20 md:h-32" src="image/restlogo.png" alt="">
                 </button>
             </div>
             <div class="space-y-2 text-md flex flex-col">
