--- a/src/site.ejs
+++ b/src/site.ejs
@@ -181,12 +181,12 @@
             <div class="container flex flex-col md:flex-row items-center justify-center">
                 <!-- obrázek-->
                 <div class="flex flex-grow-0 flex-shrink-0 basis-[60%] justify-center z-10 mb-10 md:m-0 lg:mb-0">
-                    <img class="w-5/6 h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full" src="image/picture-1.jpg" alt="">
+                    <img class="sm:w-3/4 sm:h-3/4 md:w-full md:h-full" src="image/picture-1.jpg" alt="">
                 </div>
                 <!-- CONTENT -->
                 <div class="flex flex-grow-0 flex-shrink-0 basis-[40%] flex-col items-center lg:ml-8 lg:max-w-[380px]">
                     <h1 class="text-3xl text-bookmark-blue">Text 1</h1>
-                    <p class="text-sm lg:text-base text-black text-left my-4 w-10/12 sm:w-3/4 lg:w-full">
+                    <p class="text-sm lg:text-base text-black text-left my-4 sm:w-3/4 lg:w-full">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dolorem earum quidem dolor
                         necessitatibus modi ab sed illum? Beatae iste doloremque illo.Lorem ipsum dolor sit amet,
                         consectetur adipisicing elit. Eos dolorem earum quidem dolor
@@ -200,13 +200,13 @@
             <div class="container flex flex-col md:flex-row-reverse items-center justify-center">
                 <!-- obrázek-->
                 <div class="flex flex-1 justify-center z-10 mb-10 md:m-0 lg:mb-0">
-                    <img class="w-5/6 h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full lg:w-auto lg:h-[580px]"
+                    <img class="sm:w-3/4 sm:h-3/4 md:w-full md:h-full lg:w-auto lg:h-[580px]"
                          src="image/picture-2.jpg" alt="">
                 </div>
                 <!-- CONTENT -->
                 <div class="flex flex-1 flex-col items-center lg:max-w-[480px]">
                     <h1 class="text-3xl text-bookmark-blue">Text 2</h1>
-                    <p class="text-sm lg:text-base text-black my-4 text-left w-10/12 sm:w-3/4 lg:w-full">
+                    <p class="text-sm lg:text-base text-black my-4 text-left sm:w-3/4 lg:w-full">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis voluptates sit eum, distinctio
                         illo dicta beatae dolore voluptatum accusamus. Lorem ipsum dolor sit amet consectetur
                         adipisicing elit. Quis voluptates sit eum, distinctio
@@ -221,13 +221,13 @@
             <div class="container flex flex-col md:flex-row items-center justify-center">
                 <!-- obrázek-->
                 <div class="flex flex-grow-0 flex-shrink-0 basis-[60%] justify-center z-10 mb-10 md:m-0 lg:mb-0">
-                    <img class="w-5/6 h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full lg:w-auto lg:h-[580px]"
+                    <img class="sm:w-3/4 sm:h-3/4 md:w-full md:h-full lg:w-auto lg:h-[580px]"
                          src="image/picture-3.jpg" alt="">
                 </div>
                 <!-- CONTENT -->
                 <div class="flex flex-grow-0 flex-shrink-0 basis-[40%] flex-col items-center lg:ml-8 lg:max-w-[380px]">
                     <h1 class="text-3xl text-bookmark-blue">Text 3</h1>
-                    <p class="text-sm lg:text-base text-black my-4 text-left w-10/12 sm:w-3/4 lg:w-full">
+                    <p class="text-sm lg:text-base text-black my-4 text-left sm:w-3/4 lg:w-full">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dolorem earum quidem dolor
                         necessitatibus modi ab sed illum? Beatae iste doloremque illo.Lorem ipsum dolor sit amet,
                         consectetur adipisicing elit. Eos dolorem earum quidem dolor
@@ -556,7 +556,7 @@
 
 
 <section class="bg-white mt-10 md:mt-14 lg:mt-20" id="location">
-    <div class="max-w-7xl mx-auto px-4">
+    <div class="max-w-7xl mx-auto md:px-4">
         <h2 class="text-3xl text-black font-bold mb-4 text-center">Kde nás najdete</h2>
         <div class="flex flex-col text-black items-center mb-8 mt-[1rem]">
             <p class="font-bold">Rest Café</p>
@@ -565,7 +565,7 @@
         </div>
         <a href="https://www.google.com/maps/place/Rest+Cafe/@50.0827484,14.4241915,17z/data=!3m1!4b1!4m6!3m5!1s0x470b954ba8aaa593:0x60a134159de605ea!8m2!3d50.082745!4d14.4267664!16s%2Fg%2F11r4ryjcq8?entry=ttu"
            target="_blank">
-            <img class="container " src="svg/restmap3.svg" alt="">
+            <img class="md:container" src="svg/restmap3.svg" alt="">
         </a>
     </div>
 </section>
