--- a/src/site.ejs
+++ b/src/site.ejs
@@ -267,7 +267,7 @@
             >
                 <input type="radio" name="radio" value="react" class="peer hidden" />
                 <span
-                        class="text-xs p-2.5 sm:text-base sm:py-4 tracking-widest peer-checked:bg-gradient-to-r peer-checked:from-gradient-red-dark peer-checked:to-gradient-red-light peer-checked:text-white text-gray-700 rounded-lg transition duration-150 ease-in-out"
+                        class="flex-none text-xs p-2.5 sm:text-base sm:py-4 tracking-widest peer-checked:bg-gradient-to-r peer-checked:from-gradient-red-dark peer-checked:to-gradient-red-light peer-checked:text-white text-gray-700 rounded-lg transition duration-150 ease-in-out"
                 >Cold Coffee</span
                 >
             </label>
