--- a/src/output.css
+++ b/src/output.css
@@ -1704,10 +1704,6 @@ html {
   height: 1rem;
 }
 
-.h-5\/6 {
-  height: 83.333333%;
-}
-
 .h-6 {
   height: 1.5rem;
 }
@@ -1722,10 +1718,6 @@ html {
 
 .min-h-screen {
   min-height: 100vh;
-}
-
-.w-10\/12 {
-  width: 83.333333%;
 }
 
 .w-11\/12 {
@@ -1774,6 +1766,10 @@ html {
 
 .flex-1 {
   flex: 1 1 0%;
+}
+
+.flex-none {
+  flex: none;
 }
 
 .flex-shrink-0 {
