--- a/src/site.ejs
+++ b/src/site.ejs
@@ -157,9 +157,8 @@
         <h1 class="text-4xl md:text-5xl lg:text-6xl xl:text-7xl font-bold text-center text-white z-10">Welcome to Rest
             Cafe</h1>
         <p class="text-lg md:text-xl lg:text-2xl xl:text-3xl text-center mt-4 px-4 md:px-0 text-white z-10">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Sed euismod, nunc eget aliquet
-            lacinia, mauris nunc tincidunt nunc, id tincidunt urna ligula id nunc. Sed euismod, nunc eget aliquet
-            lacinia, mauris nunc tincidunt nunc, id tincidunt urna ligula id nunc.</p>
+            Rest Cafe se rozjela před třemi lety a od té doby jsme prošli řadou výzev, zejména během karantény. S hrdostí můžeme říci, že jsme tyto obtíže překonali a jsme připraveni pokračovat v poskytování skvělého servisu. Jsme tu, abychom vám každý den přinášeli radost prostřednictvím našich výrobků a úsměvu na tváři.
+        </p>
     </div>
 </section>
 
