--- a/src/site.ejs
+++ b/src/site.ejs
@@ -154,7 +154,7 @@
     </header>
     <div class="absolute inset-0 bg-black opacity-50"></div>
     <div class="container relative items-center flex flex-col justify-center py-12 sm:pt-20">
-        <h1 class="text-4xl md:text-5xl lg:text-6xl xl:text-7xl font-bold text-center text-white z-10">Cafe</h1>
+        <h1 class="text-4xl md:text-5xl lg:text-6xl xl:text-7xl font-bold text-center text-white z-10">Rest Cafe</h1>
         <p class="text-lg md:text-xl lg:text-2xl xl:text-3xl text-center mt-4 px-4 md:px-0 text-white z-10">
             Rest Cafe se rozjela před třemi lety a od té doby jsme prošli řadou výzev, zejména během karantény. S hrdostí můžeme říci, že jsme tyto obtíže překonali a jsme připraveni pokračovat v poskytování skvělého servisu. Jsme tu, abychom vám každý den přinášeli radost prostřednictvím našich výrobků a úsměvu na tváři.
         </p>
